Fix scrollbar modals

--- a/app/src/sass/globals/_colors.scss
+++ b/app/src/sass/globals/_colors.scss
@@ -3,11 +3,10 @@
 // =======================================================================//
 
 $page-gradient: radial-gradient(80vh at center, #071629, #020C18), #071629;
-$pimper: #3D5AFE;
 
 $white: #EFEBE9;
 $black: #3E2723;
-$grey: #1c1f23;
-$t-black: rgba(0, 0, 0, 0.15);
 
-// $blue: #8f94fb;
+$pimper: #3D5AFE;
+// bootsrap link color
+$blue: $pimper;
