--- a/app/src/sass/partials/_modals.scss
+++ b/app/src/sass/partials/_modals.scss
@@ -2,12 +2,11 @@
   position: fixed;
   top: 0%;
   left: 0;
-  overflow-y: auto;
   width: 100%;
   height: 100%;
   align-items: center;
   font-weight: 500;
-  justify-content: flex-start;
+  justify-content: center;
   display: flex;
   flex-direction: column;
   pointer-events: none;
@@ -16,6 +15,12 @@
   padding: #{$modal-border * 1};
   transform: scale(.7);
   transition: .3s ease-in-out, transform .15s;
+
+  &__container {
+    overflow-y: auto;
+    padding: 1rem 0;
+    scroll-behavior: smooth;
+  }
 
   &.open {
     transform: scale(1);
@@ -60,6 +65,7 @@
       padding-left: 0;
       list-style: none;
       text-align: center;
+      width: 100%;
       // position: relative;
       z-index: 1;
       font-size: 2rem;
