--- a/app/src/sass/partials/_post.scss
+++ b/app/src/sass/partials/_post.scss
@@ -1,5 +1,5 @@
 .post {
-  // margin-bottom: 3rem;
+  scroll-behavior: smooth;
 
   .sticky {
       z-index: 1;
